gen/iam/v1/cargo-errors.log
    Checking google-iam1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/iam/v1/lib)
error[E0412]: cannot find type `ListKeyTypesItems` in module `crate::resources::projects::service_accounts::keys::params`
    --> iam/v1/lib/src/lib.rs:8946:285
     |
8946 |                 pub struct ListRequestBuilder < 'a , A > { pub ( crate ) reqwest : & 'a :: reqwest :: Client , pub ( crate ) auth : & 'a :: std :: sync :: Mutex < A > , name : String , key_types : Option < Vec < crate :: resources :: projects :: service_accounts :: keys :: params :: ListKeyTypesItems > > , access_token : Option < String > , alt : Option < crate :: params :: Alt > , callback : Option < String > , fields : Option < String > , key : Option < String > , oauth_token : Option < String > , pretty_print : Option < bool > , quota_user : Option < String > , upload_protocol : Option < String > , upload_type : Option < String > , xgafv : Option < crate :: params :: Xgafv > , }
     |                                                                                                                                                                                                                                                                                             ^^^^^^^^^^^^^^^^^ not found in `crate::resources::projects::service_accounts::keys::params`

error[E0412]: cannot find type `ListKeyTypesItems` in module `crate::resources::projects::service_accounts::keys::params`
    --> iam/v1/lib/src/lib.rs:8951:123
     |
8951 |                         value : impl Into < Vec < crate :: resources :: projects :: service_accounts :: keys :: params :: ListKeyTypesItems > >,
     |                                                                                                                           ^^^^^^^^^^^^^^^^^ not found in `crate::resources::projects::service_accounts::keys::params`

error[E0308]: mismatched types
    --> iam/v1/lib/src/lib.rs:2948:38
     |
2948 |                     self.etag = Some(value.into());
     |                                      ^^^^^^^^^^^^
     |                                      |
     |                                      expected struct `std::vec::Vec`, found struct `std::boxed::Box`
     |                                      help: try using a conversion method: `value.into().to_vec()`
     |
     = note: expected type `std::vec::Vec<u8>`
                found type `std::boxed::Box<[u8]>`

error[E0308]: mismatched types
    --> iam/v1/lib/src/lib.rs:4509:38
     |
4509 |                     self.etag = Some(value.into());
     |                                      ^^^^^^^^^^^^
     |                                      |
     |                                      expected struct `std::vec::Vec`, found struct `std::boxed::Box`
     |                                      help: try using a conversion method: `value.into().to_vec()`
     |
     = note: expected type `std::vec::Vec<u8>`
                found type `std::boxed::Box<[u8]>`

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0308, E0412.
For more information about an error, try `rustc --explain E0308`.
error: Could not compile `google-iam1`.

To learn more, run the command again with --verbose.
